--- a/style.css
+++ b/style.css
@@ -16,8 +16,59 @@ video {
   background: #2c3e50;
 }
 
-.videos {
+.video-container {
   display: flex;
-  align-items: center;
-  justify-content: center;
+  flex-direction: row;
+  align-items: start;
+  justify-content: space-between;
+}
+
+
+
+/* Estilos para los mensajes en el chat */
+#message-list {
+  list-style: none;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+#message-list li {
+  position: relative;
+  display: inline-block;
+  max-width: 80%; /* Ajusta el ancho máximo según tus necesidades */
+  background-color: #f2f2f2;
+  border-radius: 15px;
+  padding: 10px;
+  margin-bottom: 10px;
+  font-family: Arial, sans-serif;
+}
+
+#message-list li:nth-child(even) {
+  background-color: #e6e6e6;
+}
+
+#message-list li::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 10px 10px 0 0;
+  border-color: #f2f2f2 transparent transparent transparent;
+  left: 10px;
+  transform: translateY(100%);
+}
+
+#message-list li:nth-child(even)::before {
+  border-color: #e6e6e6 transparent transparent transparent;
+}
+
+#message-input {
+  margin-top: 10px;
+}
+
+#add-button {
+  margin-top: 10px;
 }
